Fix logo display on Safari browser

--- a/src/styles/FindRun.css
+++ b/src/styles/FindRun.css
@@ -137,7 +137,7 @@
     gap: 0.2em;
   }
 
-  img:last-child {
+  .joining-status-modal img:last-child {
     display: none;
   }
 }
