--- a/src/styles/Homepage.css
+++ b/src/styles/Homepage.css
@@ -38,15 +38,9 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-}
-
-.logo {
-  width: 100%;
-  height: 100%;
-}
-
-.square-logo {
-  display: none;
+  background: url("../images/weRun-large-logo.png") no-repeat;
+  background-size: contain;
+  background-position: center;
 }
 
 .home-actions {
@@ -128,17 +122,25 @@
 @media screen and (max-width: 991px) {
   .home {
     height: 100%;
+    width: 100%;
     flex-direction: column-reverse;
+    gap: 2em;
     padding-bottom: 3em;
     padding-right: 0;
     padding-left: 0;
   }
 
-  .logo-container {
-    width: 25rem;
+  .home {
+    padding-top: 0;
   }
 
-  .home-intro h2{
+  .logo-container {
+    height: 40vh;
+    width: 100vw;
+    background-color: #e6795d;
+  }
+
+  .home-intro h2 {
     width: 80%;
   }
 
@@ -157,35 +159,15 @@
 }
 
 @media screen and (max-width: 600px) {
-  .home {
-    padding-top: 0;
-  }
-
-  .logo {
-    display: none;
-  }
-
-  .logo-container {
-    overflow: hidden;
-    width: 100vw;
-    background-color: #e6795d;
-  }
-  .square-logo {
-    display: block;
-    height: 100%;
-    margin-top: -9.2em;
-    margin-bottom: -3em;
-  }
-
- .home-intro h2 {
+  .home-intro h2 {
     font-size: 45px;
   }
 
- .home-intro p {
+  .home-intro p {
     font-size: 1rem;
   }
 
-   .home-actions a {
+  .home-actions a {
     width: 9rem;
     font-size: 20px;
   }
